# novel-tts

./: .env.example  .gitignore  README.md  compose.yaml  global.d.ts  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
docs/: architecture.md  development.md
server/: app.test.ts  app.ts  config.ts  index.ts
server/crawler/: cheerioHtml.ts  fetcher.test.ts  fetcher.ts  wikicv.ts  worker.ts
server/db/: client.ts  migrate.ts  repository.ts  schema.ts
server/routes/: crawl.ts  library.ts  schemas.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: readerStore.test.ts
src/components/: BookCover.tsx  CrawlerPanel.tsx  GlossaryPanel.tsx  Header.tsx  LibraryPanel.tsx  NovelCard.tsx  README.md  ReaderPanel.tsx  SettingsPanel.tsx  TTSControls.tsx  VirtualList.tsx
src/core/: index.ts
src/core/backend/: client.ts
src/core/crawler/: README.md  browserWorker.ts  playwrightClient.ts  queue.ts  types.ts  worker.ts
src/core/glossary/: README.md  index.ts  manager.ts
src/core/jobs/: downloadQueue.ts
src/core/reader/: content.ts  readerStore.ts
src/core/sources/: README.md  SourceAdapter.ts  index.ts  novelbin.ts  truyenfull.ts  wikicv.ts
src/core/storage/: fsAdapter.ts  indexeddb.ts  localLibraryStorage.ts
src/core/translate/: README.md  TranslatorProvider.ts  cache.ts  (+1 more)
src/hooks/: README.md  useBackendCrawler.ts
src/pages/: Home.tsx  README.md
src/stores/: README.md  libraryStore.ts  settingsStore.ts
src/styles/: index.css
src/tauri-node/: crawler.js
(+13 files in other folders)
