[package]
name = "novel_tts_tauri"
version = "0.1.0"
authors = ["novel-tts"]
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
[build-dependencies]
tauri-build = { version = "1.4", features = [] }
